--- a/index.html
+++ b/index.html
@@ -83,6 +83,12 @@
         
         <div class="card">
             <img src="/img/1.jpg">
+            <h3>Образ</h3>
+        </div>
+
+        <div class="card">
+            <img src="/img/2.jpg">
+            <h3>Образ</h3>
         </div>
 
         <div class="card">
