--- a/index.html
+++ b/index.html
@@ -99,6 +99,39 @@
     </div>
 </section>
 
+<section style="padding: 40px 20px; max-width: 1000px; margin: auto;">
+<h2>Продаю</h2>
+
+<table style="width: 100%; border-collapse: collapse; margin-top: 20px;">
+    <thead>
+        <tr style="background-color: #f3f4f6;">
+            <th style="padding: 12px; border: 1px solid #ddd;">Товар</th>
+            <th style="padding: 12px; border: 1px solid #ddd;">Название</th>
+            <th style="padding: 12px; border: 1px solid #ddd;">Цена</th>
+            <th style="padding: 12px; border: 1px solid #ddd;">Количество</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td style="padding: 12px; border: 1px solid #ddd; text-align: center;">
+                <img src="https://via.placeholder.com/80" alt="Товар 1">
+            </td>
+            <td style="padding: 12px; border: 1px solid #ddd;">Смартфон X1</td>
+            <td style="padding: 12px; border: 1px solid #ddd;">25 000 ₽</td>
+            <td style="padding: 12px; border: 1px solid #ddd;">75 000 ₽</td>
+        </tr>
+        <tr>
+            <td style="padding: 12px; border: 1px solid #ddd; text-align: center;">
+                <img src="https://via.placeholder.com/80" alt="Товар 2">
+            </td>
+            <td style="padding: 12px; border: 1px solid #ddd;">Ноутбук Pro 15</td>
+            <td style="padding: 12px; border: 1px solid #ddd;">75 000 ₽</td>
+            <td style="padding: 12px; border: 1px solid #ddd;">75 000 ₽</td>
+        </tr>
+    </tbody>
+</table>
+</section>
+
 <footer>
     © 2026 Студия Камаро. Все права защищены.
 </footer>
