--- a/index.html
+++ b/index.html
@@ -116,7 +116,16 @@
             <td style="padding: 12px; border: 1px solid #ddd; text-align: center;">
                 <img src="https://img.antibk.org/i/items/maska_otmorozka4.gif" alt="Маска отморозка">
             </td>
-            <td style="padding: 12px; border: 1px solid #ddd;">Маска отморозка</td>
+            <td style="padding: 12px; border: 1px solid #ddd;">
+                Маска отморозка
+                Действует на:
+                • Понижение защиты от магии: +2
+                • Интеллект: +4
+                • Уровень маны: +40
+                • Мф. против критического удара (%): +15
+                • Мф. мощности магии стихий: +5
+                • Броня головы: 7-7
+            </td>
             <td style="padding: 12px; border: 1px solid #ddd;">9000кр</td>
             <td style="padding: 12px; border: 1px solid #ddd;">1</td>
         </tr>
