--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <img src="https://img.antibk.org/i/items/maska_otmorozka4.gif" alt="Маска отморозка">
             </td>
             <td style="padding: 12px; border: 1px solid #ddd;">
-                Маска отморозка
+                <a href="https://antibk.org/item/7813">Маска отморозка</a>
                 Действует на:
                 • Понижение защиты от магии: +2
                 • Интеллект: +4
