--- a/index.html
+++ b/index.html
@@ -117,13 +117,13 @@
                 <img src="https://img.antibk.org/i/items/maska_otmorozka4.gif" alt="Маска отморозка">
             </td>
             <td style="padding: 12px; border: 1px solid #ddd;">
-                <a href="https://antibk.org/item/7813">Маска отморозка</a>
-                Действует на:
-                • Понижение защиты от магии: +2
-                • Интеллект: +4
-                • Уровень маны: +40
-                • Мф. против критического удара (%): +15
-                • Мф. мощности магии стихий: +5
+                <a href="https://antibk.org/item/7813" target="_blank">Маска отморозка</a>
+                <b>Действует на:</b><br>
+                • Понижение защиты от магии: +2<br>
+                • Интеллект: +4<br>
+                • Уровень маны: +40<br>
+                • Мф. против критического удара (%): +15<br>
+                • Мф. мощности магии стихий: +5<br>
                 • Броня головы: 7-7
             </td>
             <td style="padding: 12px; border: 1px solid #ddd;">9000 кр</td>
