--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <thead>
         <tr style="background-color: #f3f4f6;">
             <th style="padding: 12px; border: 1px solid #ddd;">Предмет</th>
-            <th style="padding: 12px; border: 1px solid #ddd;">Название</th>
+            <th style="padding: 12px; border: 1px solid #ddd;">Характеристики</th>
             <th style="padding: 12px; border: 1px solid #ddd;">Цена</th>
             <th style="padding: 12px; border: 1px solid #ddd;">Количество</th>
         </tr>
@@ -117,8 +117,7 @@
                 <img src="https://img.antibk.org/i/items/maska_otmorozka4.gif" alt="Маска отморозка">
             </td>
             <td style="padding: 12px; border: 1px solid #ddd;">
-                <a href="https://antibk.org/item/7813" target="_blank">Маска отморозка</a>
-                <b>Действует на:</b><br>
+                <p><a href="https://antibk.org/item/7813" target="_blank">Маска отморозка</a></p>
                 • Понижение защиты от магии: +2<br>
                 • Интеллект: +4<br>
                 • Уровень маны: +40<br>
