--- a/index.html
+++ b/index.html
@@ -132,7 +132,12 @@
             <td style="padding: 12px; border: 1px solid #ddd; text-align: center;">
                 <img src="https://img.antibk.org/i/items/ring135.gif" alt="Кольцо Неуемной Силы [10]">
             </td>
-            <td style="padding: 12px; border: 1px solid #ddd;">Кольцо Неуемной Силы [10]</td>
+            <td style="padding: 12px; border: 1px solid #ddd;">
+                <p><a href="https://antibk.org/item/7038" target="_blank">Кольцо Неуемной Силы [10]</a></p>
+                • Сила: +7<br>
+                • Мф. против критического удара (%): +55<br>
+                • Мф. против увертывания (%): +55
+            </td>
             <td style="padding: 12px; border: 1px solid #ddd;">800 кр</td>
             <td style="padding: 12px; border: 1px solid #ddd;">3</td>
         </tr>
