--- a/index.html
+++ b/index.html
@@ -103,6 +103,20 @@
             <h3>Именные перчатки</h3>
         </div>
 
+        <div class="card">
+            <a href="/img/4.png" target="_blank">
+                <img src="/img/4.png">
+            </a>
+            <h3>Именное оружие</h3>
+        </div>
+
+        <div class="card">
+            <a href="/img/5.jpg" target="_blank">
+                <img src="/img/5.jpg">
+            </a>
+            <h3>Образ зверя</h3>
+        </div>
+
     </div>
 </section>
 
