--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 </section>
 
 <section>
-    <h2>Мои работы (картинки кликабельны)</h2>
+    <h2>Мои работы</h2>
 
     <div class="products">
         
