--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <tr style="background-color: #f3f4f6;">
             <th style="padding: 12px; border: 1px solid #ddd;">Предмет</th>
             <th style="padding: 12px; border: 1px solid #ddd;">Характеристики</th>
-            <th style="padding: 12px; border: 1px solid #ddd;">Цена</th>
+            <th style="padding: 12px; border: 1px solid #ddd;">Цена (за 1шт.)</th>
             <th style="padding: 12px; border: 1px solid #ddd;">Количество</th>
         </tr>
     </thead>
