--- a/index.html
+++ b/index.html
@@ -97,13 +97,6 @@
         </div>
 
         <div class="card">
-            <a href="/img/3.png" target="_blank">
-                <img src="/img/3.png">
-            </a>
-            <h3>Именные перчатки</h3>
-        </div>
-
-        <div class="card">
             <a href="/img/4.png" target="_blank">
                 <img src="/img/4.png">
             </a>
@@ -111,8 +104,36 @@
         </div>
 
         <div class="card">
+            <a href="/img/7.png" target="_blank">
+                <img src="/img/7.png">
+            </a>
+            <h3>Именное оружие</h3>
+        </div>
+
+        <div class="card">
+            <a href="/img/8.png" target="_blank">
+                <img src="/img/8.png">
+            </a>
+            <h3>Именные перчатки</h3>
+        </div>
+        
+        <div class="card">
+            <a href="/img/3.png" target="_blank">
+                <img src="/img/3.png">
+            </a>
+            <h3>Именные перчатки</h3>
+        </div>
+
+        <div class="card">
             <a href="/img/5.jpg" target="_blank">
                 <img src="/img/5.jpg">
+            </a>
+            <h3>Образ зверя</h3>
+        </div>
+
+        <div class="card">
+            <a href="/img/6.jpg" target="_blank">
+                <img src="/img/6.jpg">
             </a>
             <h3>Образ зверя</h3>
         </div>
