--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
 <section>
     <h2>Приветствую!</h2>
     <p>Я создаю образы, именные вещи, образы зверей и другой графический контент для АнтиБК.</p>
+    <p>Учитываю индивидуальные пожелания, необходимые требования, любые детали.</p>
     <p>Сроки выполнения от 1 дня, стоимость обсуждается.</p>
 </section>
 
